--- a/sections/cards.liquid
+++ b/sections/cards.liquid
@@ -52,7 +52,7 @@
 
 {% schema %}
 {
-  "name": "Card Section",
+  "name": "Card Display",
   "settings": [
     {
       "type": "text",
@@ -102,7 +102,7 @@
   "presets": [
     {
       "category": "Custom",
-      "name": "Card Section"
+      "name": "Card Display"
     }
   ]
 }
