--- a/sections/custom-liquid.liquid
+++ b/sections/custom-liquid.liquid
@@ -1,10 +1,10 @@
 <div style="background-color: {{ section.settings.background_color }};">
-    {{ section.settings.custom_liquid }}
+  {{ section.settings.custom_liquid }}
 </div>
 
 {% schema %}
 {
-  "name": "Custom Liquid",
+  "name": "Custom Liquid Content",
   "tag": "section",
   "class": "section",
   "settings": [
@@ -23,7 +23,7 @@
   ],
   "presets": [
     {
-      "name": "Custom Liquid"
+      "name": "Custom Liquid Content"
     }
   ]
 }
