--- a/sections/dev__background.liquid
+++ b/sections/dev__background.liquid
@@ -37,12 +37,12 @@
     {%- endif -%}
   "
 >
-    {{ section.settings.display_mode }}
+  {{ section.settings.display_mode }}
 </div>
 
 {% schema %}
 {
-  "name": "Custom Layout",
+  "name": "Custom Layout - BG Color",
   "settings": [
     {
       "type": "header",
