--- a/sections/dev__collapsible-content.liquid
+++ b/sections/dev__collapsible-content.liquid
@@ -9,12 +9,10 @@
         <summary>
           {{ block.settings.block_title }}
         </summary>
-        <p>  
-          
+        <p>
           {{ block.settings.block_content }}
-          
         </p>
-      </details>  
+      </details>
     </div>
   {% endfor %}
 </div>
@@ -53,7 +51,7 @@
   ],
   "presets": [
     {
-      "name": "Collapsible Content Section",
+      "name": "Collapsible Content",
       "category": "Custom"
     }
   ]
