--- a/sections/dev__featured-blogs.liquid
+++ b/sections/dev__featured-blogs.liquid
@@ -46,7 +46,7 @@
 
 {% schema %}
 {
-  "name": "Featured Blog",
+  "name": "Featured Blogs",
   "settings": [
     {
       "type": "header",
@@ -201,7 +201,7 @@
   ],
   "presets": [
     {
-      "name": "Featured Blog Section"
+      "name": "Featured Blogs Showcase"
     }
   ]
 }
