--- a/sections/dev__flex-box.liquid
+++ b/sections/dev__flex-box.liquid
@@ -652,7 +652,7 @@
   ],
   "presets": [
     {
-      "name": "Custom Layout With Flexbox",
+      "name": "Custom Layout with Flexbox",
       "category": "Layout",
       "settings": {
         "display_mode": "flex"
