--- a/sections/dev__multi-purpose.liquid
+++ b/sections/dev__multi-purpose.liquid
@@ -41,7 +41,7 @@
 
 {% schema %}
 {
-  "name": "Custom Layout",
+  "name": "Custom Layout - Page",
   "settings": [
     {
       "type": "header",
@@ -470,7 +470,7 @@
   ],
   "presets": [
     {
-      "name": "Custom Layout",
+      "name": "Custom Page Layout",
       "category": "Layout",
       "settings": {
         "display_mode": "block"
