--- a/sections/dev__position.liquid
+++ b/sections/dev__position.liquid
@@ -2,7 +2,6 @@
 <div
   class="{{ section.settings.display_mode }} custom-spacing"
   style="
-
     {%- if section.settings.position != "static" -%}
         position: {{ section.settings.position }};
         {%- if section.settings.top_offset_unit == "auto" -%}
@@ -69,7 +68,7 @@
 
 {% schema %}
 {
-  "name": "Custom Layout(Position)",
+  "name": "Custom Layout - Position",
   "settings": [
     {
       "type": "header",
