--- a/sections/dev__tw-newsletter.liquid
+++ b/sections/dev__tw-newsletter.liquid
@@ -44,7 +44,7 @@
 
 {% schema %}
 {
-  "name": "Newsletter Section",
+  "name": "Newsletter Signup Form",
   "settings": [
     {
       "type": "text",
@@ -84,7 +84,7 @@
   ],
   "presets": [
     {
-      "name": "Newsletter - Tailwind",
+      "name": "Newsletter Signup Form",
       "category": "Custom"
     }
   ]
