--- a/sections/dev_collage.liquid
+++ b/sections/dev_collage.liquid
@@ -23,7 +23,6 @@
                 {% if block.settings.second_image %}
                   {{ block.settings.product | image_url: width: 800 | image_tag: width: 500 }}
                 {% else %}
-
                   <div class="product">
                     <h3 class="product__title">{{ block.settings.product.title }}</h3>
                     <p class="product__description">{{ block.settings.product.description }}</p>
@@ -38,12 +37,14 @@
               <div class="collage-card collection-card">
                 <div class="collection">
                   {% if block.settings.collection %}
-                  {{ block.settings.collection | image_url: width: 800 | image_tag: width: 500 }}
+                    {{ block.settings.collection | image_url: width: 800 | image_tag: width: 500 }}
                   {% endif %}
                   <h3 class="collection__title">{{ block.settings.collection.title }}</h3>
                   <p class="collection__description">{{ block.settings.collection.description }}</p>
                   <!-- Display collection items or details as needed -->
-                  <a href="{{ block.settings.collection.url }}" class="btn btn-secondary">{{ block.settings.collection_text | default: block.settings.collection.title }}</a>
+                  <a href="{{ block.settings.collection.url }}" class="btn btn-secondary">
+                    {{- block.settings.collection_text | default: block.settings.collection.title -}}
+                  </a>
                 </div>
               </div>
             {% when 'video' %}
@@ -62,7 +63,7 @@
 
 {% schema %}
 {
-  "name": "Custom Collage",
+  "name": "Collage Display",
   "tag": "section",
   "class": "section",
   "settings": [
@@ -225,10 +226,7 @@
         {
           "type": "video_url",
           "id": "video_url",
-          "accept": [
-            "youtube",
-            "vimeo"
-          ],
+          "accept": ["youtube", "vimeo"],
           "default": "https://www.youtube.com/watch?v=_9VUPq3SxOc",
           "label": "Video URL",
           "info": "Enter the video URL"
@@ -239,7 +237,7 @@
   "max_blocks": 3,
   "presets": [
     {
-      "name": "Custom Collage",
+      "name": "Collage Display",
       "blocks": [
         {
           "type": "image"
