--- a/sections/dev_rich-text.liquid
+++ b/sections/dev_rich-text.liquid
@@ -56,7 +56,7 @@
 
 {% schema %}
 {
-  "name": "Rich Text",
+  "name": "Rich Text Content",
   "tag": "section",
   "class": "section",
   "disabled_on": {
@@ -284,7 +284,7 @@
   ],
   "presets": [
     {
-      "name": "Rich Text",
+      "name": "Rich Text Content",
       "blocks": [
         {
           "type": "heading"
