--- a/sections/dev_video-text.liquid
+++ b/sections/dev_video-text.liquid
@@ -73,7 +73,7 @@
 
 {% schema %}
 {
-  "name": "Video-Text Section",
+  "name": "Video with Text Overlay",
   "settings": [
     {
       "type": "url",
@@ -199,7 +199,7 @@
   "presets": [
     {
       "category": "Custom",
-      "name": "Video-Text Section"
+      "name": "Video with Text Overlay"
     }
   ]
 }
