--- a/sections/image-text.liquid
+++ b/sections/image-text.liquid
@@ -23,7 +23,7 @@
 
 {% schema %}
 {
-  "name": "Banner Template",
+  "name": "Image with Text Overlay",
   "settings": [
     {
       "type": "text",
@@ -58,7 +58,7 @@
   ],
   "presets": [
     {
-      "name": "Banner",
+      "name": "Image with Text Overlay",
       "category": "Custom"
     }
   ]
