--- a/sections/logo-carousel.liquid
+++ b/sections/logo-carousel.liquid
@@ -1,9 +1,8 @@
-<div class="logo-carousel">
-</div>
+<div class="logo-carousel"></div>
 
 {% schema %}
 {
-  "name": "logo-carousel",
+  "name": "Logo Carousel Showcase",
   "class": "shopify-brand-carousel",
   "blocks": [
     {
@@ -27,7 +26,7 @@
   ],
   "presets": [
     {
-      "name": "brand-carousel"
+      "name": "Logo Carousel Showcase"
     }
   ]
 }
