--- a/sections/map.liquid
+++ b/sections/map.liquid
@@ -28,7 +28,7 @@
 
 {% schema %}
 {
-  "name": "Map",
+  "name": "Google Map Integration",
   "settings": [
     {
       "type": "text",
@@ -85,7 +85,7 @@
   "presets": [
     {
       "category": "Custom",
-      "name": "Google Map",
+      "name": "Google Map Integration",
       "settings": {
         "api_key": "YOUR_CUSTOM_API_KEY",
         "default_latitude": "40.7128",
