--- a/sections/contact_form.liquid
+++ b/sections/contact_form.liquid
@@ -70,7 +70,7 @@
 
 {% schema %}
 {
-  "name": "Contact Page",
+  "name": "Contact Form",
   "settings": [
     {
       "type": "text",
@@ -88,7 +88,7 @@
   "presets": [
     {
       "category": "custom",
-      "name": "Contact Page"
+      "name": "Contact Form"
     }
   ]
 }
