--- a/sections/dev_testimonials.liquid
+++ b/sections/dev_testimonials.liquid
@@ -57,7 +57,7 @@
 
 {% schema %}
 {
-  "name": "Testimonials",
+  "name": "Customer Testimonials",
   "settings": [
     {
       "type": "header",
@@ -199,7 +199,7 @@
   "presets": [
     {
       "category": "Custom",
-      "name": "Testimonials Section"
+      "name": "Customer Testimonials Showcase"
     }
   ]
 }
