--- a/sections/dev__contact-form.liquid
+++ b/sections/dev__contact-form.liquid
@@ -1,4 +1,4 @@
-{{ 'contact_form.css' | asset_url | stylesheet_tag }}
+{{ 'dev__contact_form.css' | asset_url | stylesheet_tag }}
 
 <div class="contact-section">
   <div class="container">
