--- a/sections/dev__image-banner.liquid
+++ b/sections/dev__image-banner.liquid
@@ -1,5 +1,5 @@
 <!-- image-banner.liquid -->
-{{ 'image-banner.css' | asset_url | stylesheet_tag }}
+{{ 'dev__image-banner.css' | asset_url | stylesheet_tag }}
 
 <div class="image-banner"  style="background-color: {{ section.settings.background_color }};">
   {% if section.settings.mobile_image %}
