--- a/sections/dev__newsletter.liquid
+++ b/sections/dev__newsletter.liquid
@@ -1,4 +1,4 @@
-{{ 'newsletter.css' | asset_url | stylesheet_tag }}
+{{ 'dev__newsletter.css' | asset_url | stylesheet_tag }}
 
 <section class="newsletter-section">
   <div class="container">
