--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -74,7 +74,7 @@
 
     {% comment %} {% sections 'header-group' %} {% endcomment %}
     
-    {% section 'announcement-bar' %}
+    {% section 'dev__announcement-bar' %}
     {% section 'dev__header' %}
 
     {% if settings.initial_modal_enabled and template == 'index' %}
