--- a/sections/dev__footer.liquid
+++ b/sections/dev__footer.liquid
@@ -1,4 +1,4 @@
-{{ 'footer.css' | asset_url | stylesheet_tag }}
+{{ 'dev__footer.css' | asset_url | stylesheet_tag }}
 
 <footer class="footer">
   {% for block in section.blocks %}
