--- a/sections/dev_rich-text.liquid
+++ b/sections/dev_rich-text.liquid
@@ -1,21 +1,17 @@
 <!-- Section: Rich-Text -->
 <div class="rich-text{% unless section.settings.full_width %} rich-text--container{% endunless %}">
   <div
-    class="rich-text__content color-scheme-{{ section.settings.color_scheme }}{% if section.settings.full_width %} rich-text__content--full-width{% endif %} rich-text__content--padding"
+    class="rich-text__content color-scheme-{{ section.settings.color_scheme }} rich-text__content--padding bg-gray-100"
     style="padding-top: {{ section.settings.padding_top }}px; padding-bottom: {{ section.settings.padding_bottom }}px;"
   >
     <div class="rich-text__wrapper rich-text__wrapper--{{ section.settings.desktop_content_position }}{% if section.settings.full_width %} rich-text__wrapper--full-width{% endif %}">
-      <div class="rich-text__blocks text-align-{{ section.settings.content_alignment }}">
+      <div class="rich-text__blocks text-center">
         {%- for block in section.blocks -%}
           {%- case block.type -%}
             {%- when 'heading' -%}
-              <h{{ block.settings.heading_size | remove: 'h' }} class="rich-text__heading rte inline-richtext">
+              <div class="rich-text__heading rte inline-richtext">
                 {{ block.settings.heading }}
-              </h{{ block.settings.heading_size | remove: 'h' }}>
-            {%- when 'caption' -%}
-              <p class="rich-text__caption text-style-{{ block.settings.text_style }} text-size-{{ block.settings.text_size }}">
-                {{ block.settings.caption | escape }}
-              </p>
+              </div>
             {%- when 'text' -%}
               <div class="rich-text__text rte">
                 {{ block.settings.text }}
@@ -23,27 +19,8 @@
             {%- when 'button' -%}
               <div class="rich-text__buttons">
                 {%- if block.settings.button_label != blank -%}
-                  <a
-                    {% if block.settings.button_link == blank %}
-                      role="link" aria-disabled="true"
-                    {% else %}
-                      href="{{ block.settings.button_link }}"
-                    {% endif %}
-                    class="button{% if block.settings.button_style_secondary %} button--secondary{% else %} button--primary{% endif %}"
-                  >
+                  <a href="{{ block.settings.button_link }}">
                     {{- block.settings.button_label | escape -}}
-                  </a>
-                {%- endif -%}
-                {%- if block.settings.button_label_2 != blank -%}
-                  <a
-                    {% if block.settings.button_link_2 == blank %}
-                      role="link" aria-disabled="true"
-                    {% else %}
-                      href="{{ block.settings.button_link_2 }}"
-                    {% endif %}
-                    class="button{% if block.settings.button_style_secondary_2 %} button--secondary{% else %} button--primary{% endif %}"
-                  >
-                    {{- block.settings.button_label_2 | escape -}}
                   </a>
                 {%- endif -%}
               </div>
@@ -59,63 +36,7 @@
   "name": "Rich Text",
   "tag": "section",
   "class": "section",
-  "disabled_on": {
-    "groups": ["header", "footer"]
-  },
   "settings": [
-    {
-      "type": "select",
-      "id": "desktop_content_position",
-      "options": [
-        {
-          "value": "left",
-          "label": "Left"
-        },
-        {
-          "value": "center",
-          "label": "Center"
-        },
-        {
-          "value": "right",
-          "label": "Right"
-        }
-      ],
-      "default": "center",
-      "label": "Desktop Content Position",
-      "info": "Choose the position of content on desktop"
-    },
-    {
-      "type": "select",
-      "id": "content_alignment",
-      "options": [
-        {
-          "value": "left",
-          "label": "Left"
-        },
-        {
-          "value": "center",
-          "label": "Center"
-        },
-        {
-          "value": "right",
-          "label": "Right"
-        }
-      ],
-      "default": "center",
-      "label": "Content Alignment"
-    },
-    {
-      "type": "color_scheme",
-      "id": "color_scheme",
-      "label": "Color Scheme",
-      "default": "scheme-1"
-    },
-    {
-      "type": "checkbox",
-      "id": "full_width",
-      "default": true,
-      "label": "Full Width"
-    },
     {
       "type": "header",
       "content": "Padding"
@@ -138,7 +59,7 @@
       "step": 4,
       "unit": "px",
       "label": "Padding Bottom",
-      "default": 52
+      "default": 40
     }
   ],
   "blocks": [
@@ -152,79 +73,6 @@
           "id": "heading",
           "default": "Talk about your brand",
           "label": "Heading"
-        },
-        {
-          "type": "select",
-          "id": "heading_size",
-          "options": [
-            {
-              "value": "h2",
-              "label": "H2"
-            },
-            {
-              "value": "h1",
-              "label": "H1"
-            },
-            {
-              "value": "h0",
-              "label": "H0"
-            },
-            {
-              "value": "hxl",
-              "label": "HXL"
-            }
-          ],
-          "default": "h1",
-          "label": "Heading Size"
-        }
-      ]
-    },
-    {
-      "type": "caption",
-      "name": "Caption",
-      "limit": 3,
-      "settings": [
-        {
-          "type": "text",
-          "id": "caption",
-          "default": "Add a tagline",
-          "label": "Caption"
-        },
-        {
-          "type": "select",
-          "id": "text_style",
-          "options": [
-            {
-              "value": "subtitle",
-              "label": "Subtitle"
-            },
-            {
-              "value": "caption-with-letter-spacing",
-              "label": "Caption with Letter Spacing"
-            }
-          ],
-          "default": "caption-with-letter-spacing",
-          "label": "Text Style"
-        },
-        {
-          "type": "select",
-          "id": "text_size",
-          "options": [
-            {
-              "value": "small",
-              "label": "Small"
-            },
-            {
-              "value": "medium",
-              "label": "Medium"
-            },
-            {
-              "value": "large",
-              "label": "Large"
-            }
-          ],
-          "default": "medium",
-          "label": "Text Size"
         }
       ]
     },
@@ -236,7 +84,7 @@
         {
           "type": "richtext",
           "id": "text",
-          "default": "<p>Share information about your brand with your customers. Describe a product, make announcements, or welcome customers to your store.</p>",
+          "default": "<p>Share information about your brand with your customers</p>",
           "label": "Text"
         }
       ]
@@ -250,34 +98,12 @@
           "type": "text",
           "id": "button_label",
           "default": "Button label",
-          "label": "Button Label 1"
+          "label": "Button Label"
         },
         {
           "type": "url",
           "id": "button_link",
-          "label": "Button Link 1"
-        },
-        {
-          "type": "checkbox",
-          "id": "button_style_secondary",
-          "default": false,
-          "label": "Button Style Secondary 1"
-        },
-        {
-          "type": "text",
-          "id": "button_label_2",
-          "label": "Button Label 2"
-        },
-        {
-          "type": "url",
-          "id": "button_link_2",
-          "label": "Button Link 2"
-        },
-        {
-          "type": "checkbox",
-          "id": "button_style_secondary_2",
-          "default": false,
-          "label": "Button Style Secondary 2"
+          "label": "Button Link"
         }
       ]
     }
