--- a/sections/dev_rich-text.liquid
+++ b/sections/dev_rich-text.liquid
@@ -1,8 +1,8 @@
 <!-- Section: Rich-Text -->
 <div class="rich-text ">
   <div
-    class="rich-text__content color-scheme-{{ section.settings.color_scheme }} rich-text__content--padding bg-gray-100 {{ section.settings.background_color }}"
-    style="padding-top: {{ section.settings.padding_top }}px; padding-bottom: {{ section.settings.padding_bottom }}px;"
+    class="rich-text__content color-scheme-{{ section.settings.color_scheme }} rich-text__content--padding bg-gray-100"
+    style="padding-top: {{ section.settings.padding_top }}px; padding-bottom: {{ section.settings.padding_bottom }}px;background-color: {{ section.settings.background_color }};"
   >
     <div class="rich-text__wrapper rich-text__wrapper--{{ section.settings.desktop_content_position }}{% if section.settings.full_width %} rich-text__wrapper--full-width{% endif %}">
       <div class="rich-text__blocks text-center">
