--- a/sections/contact_form.liquid
+++ b/sections/contact_form.liquid
@@ -3,7 +3,7 @@
   <div class="container {{ section.settings.container_styles }}">
     <div class="contact-wrapper {{ section.settings.contact_wrapper_styles }}">
       <div class="contact-content {{ section.settings.contact_content_styles }}">
-        <h1 class="contact-content__title {{ section.settings.contact_title_styles }} w-">
+        <h1 class="contact-content__title {{ section.settings.contact_title_styles }}">
           {{ section.settings.contact_title }}
         </h1>
       </div>
