--- a/sections/contact_form.liquid
+++ b/sections/contact_form.liquid
@@ -1,7 +1,7 @@
 <!-- sections/contact-form.liquid -->
 <div class="contact-section {{ section.settings.contact_section_styles }}">
   <div class="container {{ section.settings.container_styles }}">
-    <div class="contact-wrapper {{ section.settings.contact_wrapper_styles }}">
+    <div class="contact__wrapper {{ section.settings.contact_wrapper_styles }}">
       <div class="contact-content {{ section.settings.contact_content_styles }}">
         <h1 class="contact-content__title {{ section.settings.contact_title_styles }}">
           {{ section.settings.contact_title }}
