fixed class name

--- a/sections/logo-carousel.liquid
+++ b/sections/logo-carousel.liquid
@@ -63,8 +63,8 @@ body {
 /* Responsive Styles */
 @media screen and (max-width: 768px) {
 
-    .logo-carousel:before,
-    .logo-carousel:after {
+    .logos:before,
+    .logos:after {
         position: absolute;
         top: 0;
         width: 200px;
@@ -73,7 +73,7 @@ body {
         z-index: 2;
     }
 
-    .logo-carousel__wrapper img {
+    .logos-slide img {
         height: 40px;
         margin: 0 20px;
     }
