--- a/sections/logo-carousel.liquid
+++ b/sections/logo-carousel.liquid
@@ -1,29 +1,19 @@
 <style>
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body {
-  background: #f2f2f2;
-}
-
 @keyframes slide {
   from {
     transform: translateX(0);
   }
+
   to {
     transform: translateX(-100%);
   }
-}
-
-.logos {
-  overflow: hidden;
-  padding: 20px 0;
-  background: white;
-  white-space: nowrap;
-  position: relative;
 }
 
 .logos:before,
@@ -51,49 +41,72 @@ body {
 }
 
 .logos-slide {
-  display:inline-block;
-  animation: 6s slide infinite linear;
+  display: inline-block;
+  animation: 5s slide infinite linear;
 }
 
 .logos-slide img {
   height: 50px;
+  width:auto;
   margin: 0 40px;
 }
 
-/* Responsive Styles */
-@media screen and (max-width: 768px) {
-
-    .logos:before,
-    .logos:after {
-        position: absolute;
-        top: 0;
-        width: 200px;
-        height: 100%;
-        content: "";
-        z-index: 2;
-    }
-
-    .logos-slide img {
-        height: 40px;
-        margin: 0 20px;
-    }
-}
 </style>
 
-
-<div class=logos>
+<div class="logos overflow-hidden py-[10px] bg-white whitespace-nowrap relative" >
   {% for block in section.blocks %}
-  <div class="logos-slide">
-           {{ block.settings.logo | image_url : width: 50 | image_tag }}
+  <div class="logos-slide inline-block">
+           {{ block.settings.logo | image_url : width: 200 | image_tag }}
   </div>
   {% endfor %}
 
   {% for block in section.blocks %}
-  <div class="logos-slide">
-           {{ block.settings.logo | image_url : width: 50 | image_tag }}
+  <div class="logos-slide inline-block">
+           {{ block.settings.logo | image_url : width: 200 | image_tag }}
   </div>
   {% endfor %}
 </div>
+
+
+
+
+
+{% comment %} <div class="overflow-hidden bg-white whitespace-nowrap relative logos">
+  <div class="absolute top-0 w-250 h-full bg-gradient-to-r from-white via-transparent to-white"></div>
+  <div class="absolute top-0 right-0 w-250 h-full bg-gradient-to-l from-white via-transparent to-white"></div>
+
+
+    {% for block in section.blocks %}
+    <div class="logos-slide inline-block animation-slide infinite linear">
+      {{ block.settings.logo | image_url : width: 50 | image_tag }}
+    </div>
+    {% endfor %}
+
+    {% for block in section.blocks %}
+    <div class="logos-slide inline-block animation-slide infinite linear">
+      {{ block.settings.logo | image_url : width: 50 | image_tag }}
+    </div>
+    {% endfor %}
+ 
+</div>
+
+<style>
+  @media screen and (max-width: 768px) {
+    .logos:before,
+    .logos:after {
+      width: 200px;
+    }
+
+    .logos-slide img {
+      height: 40px;
+      margin: 0 20px;
+    }
+  }
+</style>
+ {% endcomment %}
+
+
+
 
 {% schema %}
 {
