--- a/sections/dev__tw-newsletter.liquid
+++ b/sections/dev__tw-newsletter.liquid
@@ -1,22 +1,24 @@
 <!-- sections/newsletter.liquid -->
 
-<section class="bg-white dark:bg-gray-900" style="background-color: {{ section.settings.background_color }};">
-  <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
-    <div class="mx-auto max-w-screen-md sm:text-center">
-      <h2 class="mb-4 text-3xl tracking-tight font-bold text-gray-900 sm:text-4xl dark:text-white text-center">
+<div
+  class="{{ section.settings.section_container_styles }}"
+>
+  <div class="{{ section.settings.inner_container_styles }}">
+    <div class="{{ section.settings.centering_styles }}">
+      <h2 class="{{ section.settings.title_styles }}">
         {{ section.settings.newsletter_title }}
       </h2>
-      <p class="mx-auto mb-8 max-w-2xl font-light text-gray-500 md:mb-12 sm:text-xl dark:text-gray-400">
+      <p class="{{ section.settings.subtitle_styles }}">
         {{ section.settings.newsletter_subtitle }}
       </p>
       {% form 'customer' %}
-        <div class="items-center mx-auto mb-3 space-y-4 max-w-screen-sm sm:flex sm:space-y-0">
-          <div class="relative w-full">
-            <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
+        <div class="{{ section.settings.input_container_styles }}">
+          <div class="{{ section.settings.input_wrapper_styles }}">
+            <div class="{{ section.settings.icon_container_styles }}">
               {% render 'icon-mail' %}
             </div>
             <input
-              class="block p-3 pl-10 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 sm:rounded-none sm:rounded-l-lg focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+              class="{{ section.settings.input_styles }}"
               placeholder="{{ section.settings.newsletter_input_placeholder }}"
               type="email"
               name="contact[email]"
@@ -24,23 +26,23 @@
               required
             >
           </div>
-          <div>
+          <div class="{{ section.settings.button_container_styles }}">
             <button
               type="submit"
               name="commit"
-              class="py-3 px-5 w-full text-sm font-medium text-center bg-blue-600 text-white rounded-lg border cursor-pointer bg-primary-700 border-primary-600 sm:rounded-none sm:rounded-r-lg hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+              class="{{ section.settings.button_styles }}"
             >
               {{ section.settings.newsletter_button_text }}
             </button>
           </div>
         </div>
-        <div class="mx-auto max-w-screen-sm text-sm text-gray-500 newsletter-form-footer dark:text-gray-300 text-center">
+        <div class="{{ section.settings.privacy_policy_styles }}">
           {{ section.settings.newsletter_privacy_policy }}
         </div>
       {% endform %}
     </div>
   </div>
-</section>
+</div>
 
 {% schema %}
 {
@@ -77,9 +79,80 @@
       "default": "We care about the protection of your data. Read our Privacy Policy."
     },
     {
-      "type": "color",
-      "id": "background_color",
-      "label": " Background Color"
+      "type": "header",
+      "content": "Apply Tailwind CSS Classes",
+      "info": "Note: Insert classes with space between them."
+    },
+    {
+      "type": "textarea",
+      "id": "section_container_styles",
+      "label": "Section Container Styles",
+      "default": "bg-white dark:bg-gray-900"
+    },
+    {
+      "type": "textarea",
+      "id": "inner_container_styles",
+      "label": "Inner Container Styles",
+      "default": "py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6"
+    },
+    {
+      "type": "textarea",
+      "id": "centering_styles",
+      "label": "Centering Styles",
+      "default": "mx-auto max-w-screen-md sm:text-center"
+    },
+    {
+      "type": "textarea",
+      "id": "title_styles",
+      "label": "Title Styles",
+      "default": "mb-4 text-3xl tracking-tight font-bold text-gray-900 sm:text-4xl dark:text-white text-center"
+    },
+    {
+      "type": "textarea",
+      "id": "subtitle_styles",
+      "label": "Subtitle Styles",
+      "default": "mx-auto mb-8 max-w-2xl font-light text-gray-500 md:mb-12 sm:text-xl dark:text-gray-400"
+    },
+    {
+      "type": "textarea",
+      "id": "input_container_styles",
+      "label": "Input Container Styles",
+      "default": "items-center mx-auto mb-3 space-y-4 max-w-screen-sm sm:flex sm:space-y-0"
+    },
+    {
+      "type": "textarea",
+      "id": "input_wrapper_styles",
+      "label": "Input Wrapper Styles",
+      "default": "relative w-full"
+    },
+    {
+      "type": "textarea",
+      "id": "icon_container_styles",
+      "label": "Icon Container Styles",
+      "default": "flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none"
+    },
+    {
+      "type": "textarea",
+      "id": "input_styles",
+      "label": "Input Styles",
+      "default": "block p-3 pl-10 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 sm:rounded-none sm:rounded-l-lg focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+    },
+    {
+      "type": "textarea",
+      "id": "button_container_styles",
+      "label": "Button Container Styles"
+    },
+    {
+      "type": "textarea",
+      "id": "button_styles",
+      "label": "Button Styles",
+      "default": "py-3 px-5 w-full text-sm font-medium text-center bg-blue-600 text-white rounded-lg border cursor-pointer bg-primary-700 border-primary-600 sm:rounded-none sm:rounded-r-lg hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+    },
+    {
+      "type": "textarea",
+      "id": "privacy_policy_styles",
+      "label": "Privacy Policy Styles",
+      "default": "mx-auto max-w-screen-sm text-sm text-gray-500 newsletter-form-footer dark:text-gray-300 text-center"
     }
   ],
   "presets": [
