--- a/sections/logo-carousel.liquid
+++ b/sections/logo-carousel.liquid
@@ -45,26 +45,54 @@
   animation: 5s slide infinite linear;
 }
 
-.logos-slide img {
+{% comment %} .logos-slide img {
   height: 50px;
   width:auto;
   margin: 0 40px;
-}
+} {% endcomment %}
 
 </style>
 
 <div class="logos overflow-hidden py-[10px] bg-white whitespace-nowrap relative" >
   {% for block in section.blocks %}
   <div class="logos-slide inline-block">
-           {{ block.settings.logo | image_url : width: 200 | image_tag }}
+        {%- assign logo_alt = block.settings.logo_alt | default: shop.name | escape -%}
+        {% capture sizes %}(max-width: {{ block.settings.logo_width | times: 2 }}px) 50vw, {{ block.settings.logo_width }}px{% endcapture %}
+        {% capture widths %}{{ block.settings.logo_width }}, {{ block.settings.logo_width | times: 1.5 | round }}, {{ block.settings.logo_width | times: 2 }}{% endcapture %}
+        {{
+          block.settings.logo
+          | image_url: width: 100
+          | image_tag:
+            widths: widths,
+            height: auto,
+            width: block.settings.logo_width,
+            alt: logo_alt,
+            sizes: sizes,
+            preload: true
+        }}
   </div>
   {% endfor %}
 
   {% for block in section.blocks %}
   <div class="logos-slide inline-block">
-           {{ block.settings.logo | image_url : width: 200 | image_tag }}
+        {%- assign logo_alt = block.settings.logo_alt | default: shop.name | escape -%}
+        {% capture sizes %}(max-width: {{ block.settings.logo_width | times: 2 }}px) 50vw, {{ block.settings.logo_width }}px{% endcapture %}
+        {% capture widths %}{{ block.settings.logo_width }}, {{ block.settings.logo_width | times: 1.5 | round }}, {{ block.settings.logo_width | times: 2 }}{% endcapture %}
+        {{
+          block.settings.logo
+          | image_url: width: 100
+          | image_tag:
+            widths: widths,
+            height: auto,
+            width: block.settings.logo_width,
+            alt: logo_alt,
+            sizes: sizes,
+            preload: true
+        }}
   </div>
   {% endfor %}
+
+ 
 </div>
 
 
@@ -72,24 +100,6 @@
 
 
 {% comment %} <div class="overflow-hidden bg-white whitespace-nowrap relative logos">
-  <div class="absolute top-0 w-250 h-full bg-gradient-to-r from-white via-transparent to-white"></div>
-  <div class="absolute top-0 right-0 w-250 h-full bg-gradient-to-l from-white via-transparent to-white"></div>
-
-
-    {% for block in section.blocks %}
-    <div class="logos-slide inline-block animation-slide infinite linear">
-      {{ block.settings.logo | image_url : width: 50 | image_tag }}
-    </div>
-    {% endfor %}
-
-    {% for block in section.blocks %}
-    <div class="logos-slide inline-block animation-slide infinite linear">
-      {{ block.settings.logo | image_url : width: 50 | image_tag }}
-    </div>
-    {% endfor %}
- 
-</div>
-
 <style>
   @media screen and (max-width: 768px) {
     .logos:before,
@@ -124,8 +134,18 @@
           "info": "Select the logo image"
         },
         {
+          "type": "range",
+          "id": "logo_width",
+          "min": 0,
+          "max": 100,
+          "step": 10,
+          "default": 50,
+          "unit": "px",
+          "label": "Set Logo width"
+        },
+        {
           "type": "text",
-          "id": "alt_text",
+          "id": "logo_alt",
           "label": "Alt Text",
           "placeholder": "Alt text for accessibility"
         }
